source/stylesheets/risky.css.scss
/*
 * Undo the few default styles that clash with the game
 */

body {
  background-color: white;
}

.title {
  border-bottom: none;
}

/*
 * Based on the code pen by Elbarto https://codepen.io/elbarto84/pen/wrcob
 */

$hex-size: 2em;
$center-hex-size: 5em;

/* ----------------------------------------- */
.container {
  display: inline-block;
  line-height: 1.3;
  padding: 5px;
  margin: 5px;
  position: static;
  visibility: hidden;
}

ol.even {
  position: relative;
  left: ($hex-size / 1.1);
}

ol.odd {
  position: relative;
}

ol.point-to-point-up {
  margin-top: -18%;
}

ol.point-to-point-down {
  margin-bottom: -18%;
}

ol.face-to-face-up {
  margin-top: -25%;
}

ol.face-to-face-down {
  margin-bottom: -25%;
}

ol.nothing-down {
  margin-bottom: 0%;
}

ol.nothing-up {
  margin-top: 0%;
}

ol {
  visibility: hidden;
}

.hex {
  position: relative;
  margin: 1em auto;
  width: $hex-size;
  height: ($hex-size * 1.7);
  border-radius: 0.4em;
  background: lightgreen;
  transform: rotate(-90deg);
  display: inline-block;
  margin-right: ($hex-size / 1.30);
  transition: all 150ms ease-in-out;
  z-index: 100;
  visibility: visible;
}

.hex:before, .hex:after {
  position: absolute;
  width: inherit; height: inherit;
  border-radius: inherit;
  background: inherit;
  content: '';
}

.hex:before {
  transform: rotate(60deg);
}

.hex:after {
  transform: rotate(-60deg);
}

.hex:hover {
  cursor: pointer;
}

.hex.blank {
  background: yellow;
  opacity: 0.1;
}

.hex.blank:hover {
  cursor: auto;
}

.hex.inner {
  background: lightyellow;
}

.hex.water {
  background: lightskyblue;
}

.hex.island {
  background: lightseagreen;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

.hex.highlight {
  width: 1.2em;
  margin-left: 0.5em;
}

.hex.center.highlight {
  width: 3em;
}

.hex.half {
  height: $hex-size;
}

.selected-hex, .selected-hex::before, .selected-hex::after {
  box-sizing: border-box;
  border-top: 1px dashed black;
  border-bottom: 1px dashed black;
}

/* Sections of map */

#map {
  width: 700px;
  height: 660px;
  position: relative;
  padding: 0;
}

@media (max-width: 727px) {
  #map {
    overflow-x: auto; /* scroll on mobile */
    height: 680px; /* add some height to accomodate the horizontal scroll bar */
  }
}

.section {
  border: 1px solid black;

  /* make the div take up the size of its contents only */
  display: inline-block;

  /*
   * Absolutely position all divs with an origin of half their width
   * and at the bottom of their height.
   */
  position: absolute;
  transform: translate(-50%,-100%);
  top: 50%;
  left: 50%;

  /* use the middle bottom to rotate each section */
  transform-origin: 50% 100%;

  visibility: hidden;
}

.p1 {
  background-color: #c65c8a !important;
}

.p2 {
  background-color: #694b98 !important;
}

.p3 {
  background-color: #cd5148 !important;
}

.p4 {
  background-color: #58a563 !important;
}

.p5 {
  background-color: #aca535 !important;
}

.p6 {
  background-color: #7d655e !important;
}

#section0 {
  transform: translate(-50%,-100%);
  .content {
    transform: rotate(90deg);
  }
  .content.info {
    top: 20px;
    left: 5px;
  }
  .content.units {
    top: 10px;
    left: -5px;
  }
}

#section1 {
  transform: translate(-50%,-100%) rotate(30deg);
  .content {
    transform: rotate(60deg);
  }
  .content.info {
    top: 15px;
    left: 10px;
  }
  .content.units {
    top: 12px;
    left: -3px;
  }
}

#section2 {
  transform: translate(-50%,-100%) rotate(60deg);
  .content {
    transform: rotate(30deg);
  }
  .content.info {
    top: 8px;
    left: 12px;
  }
  .content.units {
    top: 12px;
    left: 0px;
  }
}

#section3 {
  transform: translate(-50%,-100%) rotate(90deg);
  .content {
    transform: rotate(0deg);
  }
  .content.info {
    top: 0px;
    left: 10px;
  }
  .content.units {
    top: 10px;
    left: 4px;
  }
}

#section4 {
  transform: translate(-50%,-100%) rotate(120deg);
  .content {
    transform: rotate(-30deg);
  }
  .content.info {
    top: -7px;
    left: 5px;
  }
  .content.units {
    top: 4px;
    left: 4px;
  }
}

#section5 {
  transform: translate(-50%,-100%) rotate(150deg);
  .content {
    transform: rotate(-60deg);
  }
  .content.info {
    top: -7px;
    left: -3px;
  }
  .content.units {
    top: 4px;
    left: 2px;
  }
}

#section6 {
  transform: translate(-50%,-100%) rotate(180deg);
  .content {
    transform: rotate(-90deg);
  }
  .content.info {
    top: -5px;
    left: -12px;
  }
  .content.units {
    top: 4px;
    left: -2px;
  }
}

#section7 {
  transform: translate(-50%,-100%) rotate(210deg);
  .content {
    transform: rotate(-120deg);
  }
  .content.info {
    top: 0px;
    left: -16px;
  }
  .content.units {
    top: 4px;
    left: -4px;
  }
}

#section8 {
  transform: translate(-50%,-100%) rotate(240deg);
  .content {
    transform: rotate(-150deg);
  }
  .content.info {
    top: 8px;
    left: -20px;
  }
  .content.units {
    top: 4px;
    left: -6px;
  }
}

#section9 {
  transform: translate(-50%,-100%) rotate(270deg);
  .content {
    transform: rotate(-180deg);
  }
  .content.info {
    top: 14px;
    left: -15px;
  }
  .content.units {
    top: 6px;
    left: -8px;
  }
}

#section10 {
  transform: translate(-50%,-100%) rotate(300deg);
  .content {
    transform: rotate(-210deg);
  }
  .content.info {
    top: 20px;
    left: -10px;
  }
  .content.units {
    top: 8px;
    left: -8px;
  }
}

#section11 {
  transform: translate(-50%,-100%) rotate(330deg);
  .content {
    transform: rotate(-240deg);
  }
  .content.info {
    top: 20px;
    left: -5px;
  }
  .content.units {
    top: 12px;
    left: -12px;
  }
}

#section12 {
  .content {
    top: 50%;
    transform: rotate(90deg) translate(-50%,-50%);
  }
  .content.info {
    left: 25%;
    top: 60%;
  }
}

/* Centre hexagon */

.section.center {
  transform: translate(-50%,-50%);
}

ol.center {
  margin: auto;
  padding: 0;
}

.center.hex {
  text-align: left;
  width: $center-hex-size;
  height: ($center-hex-size * 1.7);
  border-radius: 0.8em;
  background: gold;
  margin: auto;
}

/* Game info */

.hex .content {
  position: absolute;
  z-index: 100000;
  font-size: 8px;
  display: block;
  width: 5em;
  height: 5em;
}

p.id {
  color: goldenrod;
  font-weight: bold;
}

p.id.mid {
  color: yellow;
}

/* Map SVG and layout */

/* position all parts of map in the same position as the map */
#walls, #paths, #territories, #mines, #castles {
  position: absolute;
  top: 0;
  left: 0;
  width: 700px;
  height: 660px;
}

/* put walls and paths below territories */
#walls, #paths {
  z-index: -1000;
}

/* put mines and castles over territories */
#mines, #castles {
  z-index: 100;
  /* hide the wrapper so territories can still be clicked */
  /*
   * This hidden parent visible children method stopped working
   * in Gecko and WebKit?
   */
  /* this works instead because we never need to click the dots */
  pointer-events: none;
  /*
  visibility: hidden;
  circle {
    visibility: visible;
  }
  */
}

#paths {
  background-color: cyan;
}

#walls {
  opacity: 0.2;
}

/* UI Sections */


#armies, #map, #info, #players, #mine-gold-income {
  display: block;
  margin: 5px;
  border: 1px solid black;
}

@media (max-width: 933px) {
  /* remove margins once the ui collapses to a single column layout */
  #armies, #map, #info, #players, #mine-gold-income {
    margin: 0;
  }
}

#armies, #info, #players, #mine-gold-income {
  h2, h3, h4, ol {
    margin: 5px 0;
  }
  input[type='number'] {
    width: 60px;
    box-sizing: border-box;
    border: 2px solid lightgrey;
    border-radius: 4px;
    margin: 2px;
    padding: 2px;
  }
  padding: 5px;
}

#players {
  padding: 0 !important;
}

#flex-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

#armies {
  display: flex;
  flex-direction: column;
  ol {
    padding-left: 25px;
  }
}

#armies, #info {
  li, ol {
    visibility: visible;
  }
  width: 200px;
}

#armies-attack button {
  width: 100%;
}

.buy {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  p, label, input {
    margin: 5px 0;
    margin-right: 5px;
  }
}

#armies .hidden {
  visibility: hidden;
}

#info-buttons {
  display: flex;
  flex-direction: column;
}

#players ul {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;
  list-style-type: none;
  justify-content: center;
}

.player-info {
  margin: 2px;
  padding: 2px;
}

#turn-player-unit-upgrades {
  display: flex;
  flex-direction: column;
}

#mine-gold-income {
  text-align: center;
  ol {
    visibility: visible;
  }
  margin: auto;
  max-width: 1000px;
}

#tutorial {
  text-align: center;
  article {
    margin: auto;
    p, li {
      text-align: left;
    }
  }
}

/* Start selection */

#choose-start {
  button {
    width: 100%;
  }
}

#choose-start.hidden {
  display: none;
}

#bot-controls {
  display: flex;
  flex-direction: column;
  text-align: center;
}

